css/styles.css
/* Roboto */
@font-face {
  font-family: "Roboto";
  src:
    url("fonts/Roboto-Regular.woff2") format("ttf"),
    url("fonts/Roboto-Regular.woff") format("ttf");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src:
    url("fonts/Roboto-SemiBold.woff2") format("ttf"),
    url("fonts/Roboto-SemiBold.woff") format("ttf");
  font-weight: 600;
  font-style: normal;
}

/* Play */
@font-face {
  font-family: "Play";
  src:
    url("fonts/Play-Regular.woff2") format("ttf"),
    url("fonts/Play-Regular.woff") format("ttf");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Play";
  src:
    url("fonts/Play-Bold.woff2") format("ttf"),
    url("fonts/Play-Bold.woff") format("ttf");
  font-weight: 700;
  font-style: normal;
}

:root {
  --color-white: #ffffff;
  --color-primary-light: #2b7fff;
  --color-primary-dark: #011c44;
  --color-gray: #747272;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 18px;
}

a {
  text-decoration: none;
  color: var(--color-white);
  display: flex;
}

ul {
  list-style: none;
}

img {
  max-width: 100%;
}

.wrapper {
  background: rgba(255, 255, 255, 0.25);
  backdrop-filter: blur(10px);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 106px;
}
f .container {
  max-width: 1288px;
  margin: 0 auto;
  padding: 0 24px;
  width: 100%;
}

header {
  padding: 32px 0;
  z-index: 2;
  position: relative;
}

.navigation {
  display: flex;
  padding: 0 101px 32px 101px;
  justify-content: center;
}

.navigation .logo {
  font-size: 22px;
  font-weight: 700;
  color: var(--color-primary-light);
}

.navigation .menu {
  display: flex;
  align-items: center;
  flex-grow: 1;
  justify-content: center;
  padding: 0 240px;
}

.navigation .menu ul {
  list-style: none;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 56px;
}

.navigation .menu ul li {
  display: inline-block;
  font-size: 18px;
  font-weight: 700;
}

.navigation .menu ul li a {
  color: var(--color-primary-dark);
}

.navigation .menu ul li a:hover {
  color: var(--color-primary-light);
  transition: color 0.3s ease;
}

.links {
  display: flex;
  gap: 32px;
  align-items: center;
}

.links-icon {
  fill: var(--color-primary-dark);
}

.links-icon:hover {
  fill: var(--color-primary-light);
  transition: fill 0.3s ease;
}

.hero {
  padding: 123px 0 0 205px;
  background-image:
    linear-gradient(
      89.38deg,
      #ffffff 30.62%,
      rgba(255, 255, 255, 0.850898) 41.31%,
      rgba(255, 255, 255, 0.193204) 58.65%,
      rgba(255, 255, 255, 0) 72.78%
    ),
    url("../img/girl-working.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.wave {
  background-image: url("../img/wavesNegative.svg");
  color: var(--color-white);
  transform: scaleX(-1);
  background-position-y: 40px;
  background-repeat: repeat-x;
  background-size: 2000px 200px;
}

.hero-info {
  width: 530px;
  padding-left: 122px;
}

.hero-info h2 {
  font-size: 18px;
  font-weight: 400;
  color: var(--color-primary-dark);
  padding-bottom: 16px;
}

.hero-info h1 {
  color: var(--color-primary-light);
  font-weight: 700;
  font-size: 140px;
  line-height: 114px;
  padding-bottom: 40px;
}

.hero-info .btn {
  color: var(--color-white);
  background-color: var(--color-primary-light);
  border: 2px solid var(--color-primary-light);
  border-radius: 32px;
  padding: 16px 32px;
  cursor: pointer;
  font-weight: 600;
  font-size: 18px;
}

.hero-info .btn:hover {
  background-color: transparent;
  color: var(--color-primary-dark);
  transition: background-color 0.3s ease;
}

.hero-info p {
  width: 238px;
  height: 36px;
  font-size: 12px;
  line-height: 150%;
  margin-top: 14px;
  text-align: center;
}

.reincarnation {
  position: relative;
  margin-top: 113px;
  display: flex;
  justify-content: center;
  gap: 32px;
}

.reincarnation h2 {
  font-weight: 700;
  font-size: 64px;
  color: var(--color-primary-dark);
  padding-bottom: 40px;
}

.reincarnation p {
  font-size: 22px;
  font-weight: 400;
  line-height: 38px;
  padding-bottom: 40px;
}

.reincarnation p span {
  font-weight: 600;
}

.star {
  position: relative;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.star .star1 {
  width: 64px;
  height: 64px;
  position: absolute;
  top: 355px;
  left: 85px;
  animation: spin 3s linear;
}

.star .star2 {
  width: 40px;
  height: 40px;
  position: absolute;
  right: -35px;
  top: 30px;
}

.star .star3 {
  width: 16px;
  height: 16px;
  position: absolute;
  right: 0;
  bottom: -280px;
}

.two-girls {
  width: 499px;
  height: 695px;
  position: relative;
}

.two-girls img {
  width: 343px;
  height: 328px;
  border-radius: 50%;
}

.wooman2 {
  position: absolute;
  bottom: 0;
  right: 0;
}

.txt-info {
  max-width: 709px;
  padding-bottom: 200px;
}

.wave-2 {
  background-image: url(../img/background.svg);
  background-size: cover;
}

.why-us {
  padding-top: 176px;
  padding-bottom: 96px;
}

.why-us h2 {
  font-weight: 700;
  font-size: 64px;
  text-align: center;
  color: var(--color-primary-dark);
  margin-bottom: 48px;
}

.format-section {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: row;
  gap: 56px;
}

.swiper-slide {
  background-color: var(--color-white);
  padding: 24px 32px;
  text-align: center;
  border-radius: 32px;
  width: 316px;
  height: 181px;
  box-shadow: 0 4px 4px #a8c6f5;
}

.swiper-slide svg {
  fill: var(--color-primary-light);
}

.swiper-slide p {
  font-size: 18px;
  line-height: 24px;
  width: 252px;
  height: 72px;
}

.our-procedures h2 {
  font-weight: 700;
  font-size: 64px;
  text-align: center;
  color: var(--beauty-landing-2-c1);
  padding-bottom: 48px;
}

.our-procedures ul {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;
}
/* ... */

